katalog/tests/kyverno-manifests/deploy_ns_whitelisted.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deployment-allowed-ns
  name: deployment-allowed-ns
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      run: deployment-allowed-ns
  template:
    metadata:
      labels:
        run: deployment-allowed-ns
    spec:
      containers:
        - image: registry.sighup.io/fury/nginx:latest
          name: deployment-allowed-ns
