katalog/tests/kyverno-manifests/deployment_reject_label_latest.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deployment-not-allowed-by-label
  name: deployment-not-allowed-by-label
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: deployment-not-allowed-by-label
  strategy: {}
  template:
    metadata:
      labels:
        run: deployment-not-allowed-by-label
    spec:
      containers:
        - image: registry.sighup.io/fury/nginx:latest
          name: deployment-not-allowed-by-label
          resources: {}
status: {}
